
[workspace]
resolver = "2"
members = ["muddy"]

[workspace.package]
version = "0.3.1"
authors = ["orph3uslyre"]
description = "A rust literal string obfuscation library."
edition = "2021"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["obfuscation", "obfuscate", "hide", "strings"]
categories = ["encoding", "development-tools", "cryptography"]
repository = "https://github.com/orph3usLyre/muddy-waters"
