[package]
name = "muddy"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
muddy_macros = { path = "../muddy_macros", version = "0.2"}
once_cell = { workspace = true }
chacha20poly1305 = "0.10"
const-hex = "1.11"
