[package]
name = "obfuscate-str-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "*"
once_cell = "1.19"
rand = "0.8.5"
aes = "0.8.3"
chacha20poly1305 = "0.10.1"
