[package]
name = "obfuscate-str"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obfuscate-str-proc = {path = "../obfuscate-str-proc", version = "*"}
once_cell = "1.19"
chacha20poly1305 = "0.10.1"
const-hex = "1.11.0"
